Fix Safari positioning issues; alignment fixes.
This is a work in progress; please don't reverse anything without dropping me a
quick message.

--- a/static/styles/badge.less
+++ b/static/styles/badge.less
@@ -1,3 +1,4 @@
+
 .mm-badge-border {
   padding-top: 0.45em;
   padding-bottom: 0.45em;
@@ -44,7 +45,7 @@
 }
 
 .mm-badge-overlay {
-  font-size: 0.26em;
+  font-size: 0.325em;
   margin: 0;
   bottom: -0.5em;
   left: 2.1em;
