--- a/static/styles/button.less
+++ b/static/styles/button.less
@@ -1,19 +1,21 @@
+
 .mm-button {
   display: inline-block;
+  vertical-align: top;
   cursor: pointer;
   min-height: 3em;
   overflow: hidden;
   padding-left: 1em;
-  border-radius: 1.35em;
+  border-radius: 1.5em;
   border: solid 1px rgba(0, 0, 0, 0.3);
-  box-shadow: rgba(0, 0, 0, 0.5) 2px 2px 2px;
+  box-shadow: rgba(0, 0, 0, 0.25) 1px 1px 1px;
   background-color: rgba(255, 255, 255, 0.45);
 }
 
 .mm-button-inverse {
   background-color: rgba(255, 255, 255, 0.2);
   border: solid 1px rgba(255, 255, 255, 0.1);
-  box-shadow: rgba(255, 255, 255, 0.1) 2px 2px 2px;
+  box-shadow: rgba(255, 255, 255, 0.1) 1px 1px 1px;
 }
 
 .mm-dropdown {
@@ -22,7 +24,7 @@
   &.mm-multiple-select li .selected {
     text-decoration: none;
     color: #262626;
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
   }
 
 }
@@ -91,3 +93,4 @@ div.mm-button-text {
 .mm-button-disabled.mm-button-inverse {
   background-color: rgba(255, 255, 255, 0.1);
 }
+
