--- a/static/styles/dropdown.less
+++ b/static/styles/dropdown.less
@@ -41,7 +41,8 @@
   &.pair-left {
     padding-right: 0;
     .mm-button {
-      border-radius: 1.35em 0 0 1.35em;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
       border-right-width: 0;
     }
     .mm-button-dropdown {
@@ -56,7 +57,8 @@
   &.pair-right {
     padding-left: 0;
     .mm-button {
-      border-radius: 0 1.35em 1.35em 0;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
       padding-left: 0.5em;
       border-left-color: #aaa;
     }
