--- a/static/styles/icon.less
+++ b/static/styles/icon.less
@@ -19,9 +19,19 @@
   top: 0.1em;
 }
 
+.mm-icon-nudge-up {
+  position: relative;
+  top: -0.15em;
+}
+
 .mm-icon-nudge-left {
   position: relative;
   right: 0.15em;
+}
+
+.mm-icon-nudge-right {
+  position: relative;
+  right: -0.15em;
 }
 
 .mm-icon-caption {
