--- a/static/styles/inbox.less
+++ b/static/styles/inbox.less
@@ -51,7 +51,7 @@
     float: right;
 
     a {
-      padding-top: 0.5em;
+      padding-top: 0.75em;
       width: 3em;
     }
   }
@@ -72,7 +72,8 @@
     white-space: nowrap;
 
     .button-label {
-      margin-top: -5px;
+      top: -0.5em;
+      position: relative;
     }
     
     a {
@@ -98,14 +99,13 @@
   background-color: @option-color;
   height: @filters-height;
   font-size: 0.95em;
-  padding: 0 1.5em 0 0.5em;
+  padding: 0.75em 1.5em 0 0.5em;
   white-space: nowrap;
   box-shadow: 0 5px 2px -2px #aaa;
 
   .dropdown {
     width: 22%;
     padding: 0 0.5em;
-    margin-top: 0.5em;
     text-align: left;
 
     &.pair-left, &.pair-right {
@@ -342,12 +342,12 @@
   }
   .filters {
     text-align: right;
-    max-height: 3.55em;
+    max-height: 3.15em;
     padding: 0.25em 0.5em 1em 0.5em;
     .dropdown {
       width: 6.25em;
       display: inline-block;
-      font-size: 0.75em;
+      font-size: 0.77em;
       padding: 0 0.25em;
       &.pair-left, &.pair-right {
         width: 3em;
@@ -360,6 +360,7 @@
     }
     .slide-back {
       width: 7em;
+      padding-top: 0.25em;
       .mm-button-text {
         visibility: visible;
         width: auto;
@@ -371,7 +372,7 @@
   }
   .row.content {
     .inbox {
-      top: 6.5em;
+      top: 6.25em;
     }
     .meta {
       padding-bottom: 0;
@@ -437,11 +438,28 @@
   .datepicker:before, .datepicker:after {
     display: none;
   }
+
+  .row.header .extras a {
+    padding-top: 0.3em;
+  }
 }
 
 @media (max-width: 400px) {
+  .welcome {
+    display: none;
+  }
+  .row.filters .slide-back {
+    width: 4em;
+    .mm-button-text {
+      width: 0;
+      visibility: hidden;
+    }
+  }
+}
+
+@media (max-width: 767px) {
   .row.header {
-    .button-label, .welcome {
+    .button-label {
       display: none;
     }
     .tabs a {
@@ -449,13 +467,6 @@
     }
     .mm-icon {
       font-size: 2.5em;
-    }
-  }
-  .row.filters .slide-back {
-    width: 4em;
-    .mm-button-text {
-      width: 0;
-      visibility: hidden;
     }
   }
 }
