--- a/static/styles/variables.less
+++ b/static/styles/variables.less
@@ -12,7 +12,7 @@
 @error-color: #da4548;
 @ok-color:#a0ba62;
 
-@radius-size: 5px;
+@radius-size: 0.85em;
 @header-height: 4.75em;
 @filters-height: 4.25em;
 @content-width: 1170px;
